--- a/dbt-bigquery-core/packages.yml
+++ b/dbt-bigquery-core/packages.yml
@@ -1,8 +1,8 @@
 packages:
-  - package: calogica/dbt_expectations
-    version: [">=0.8.0", "<0.9.0"]
   - package: dbt-labs/dbt_utils
-    version: [">=1.1.1"]
+    version: [">=1.0.0", "<2.0.0"]
+  - package: metaplane/dbt_expectations
+    version: 0.8.5
   - package: tnightengale/dbt_meta_testing
     version: [">=0.3.6"]
   - package: dbt-labs/codegen
