--- a/dbt-bigquery-core/profiles.yml
+++ b/dbt-bigquery-core/profiles.yml
@@ -5,7 +5,7 @@ dbt-bigquery-core-profile:
       extensions:
         - httpfs
         - parquet
-      path: ./dbt.duckdb
+      path: /tmp/dbt.duckdb
       schema: dev
       threads: 1
       type: duckdb
@@ -13,9 +13,10 @@ dbt-bigquery-core-profile:
       type: bigquery
       method: service-account
       project: dbt-bigquery-core
-      dataset: ingest_newsapi_v1  # Ensure the dataset name is correct
+      schema: dev_{{env_var('DBT_USER',env_var('USER','unknown'))}}
+      location: EU
       threads: 1
       job_execution_timeout_seconds: 300
       job_retries: 1
-      keyfile: /Users/ekoepplin/dbt-bigquery-core-86e81e5718d0.json
+      keyfile: "{{ env_var('GOOGLE_APPLICATION_CREDENTIALS') }}"
       priority: interactive
