--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.13"
+python = ">=3.9,<3.10"
 duckdb = "1.1.1"
 fire = "^0.5.0"
-google-cloud-bigquery = "3.25.0"
+google-cloud-bigquery = ">=1.25.0,<3.0.0"
 loguru = "^0.7.2"
 google-auth = "^2.24.0"
 newsapi =  "0.1.1"
@@ -19,10 +19,11 @@ pydantic = "^2.7.4"
 db-dtypes = "^1.1.1"
 pyarrow = "17.0.0"
 google-cloud-bigquery-storage = "2.26"
-dbt-core = "^1.8.0"
-dbt-duckdb = {version = "1.8.1"}
-dbt-bigquery = "^1.8.0"
+dbt-core = ">=1.3.0,<1.4.0"
+dbt-bigquery = ">=1.3.0,<1.4.0"
 dlt = {extras = ["bigquery"], version = "^1.8.0"}
+soda-core-dbt = "^3.5.0"
+soda-core-bigquery = "^3.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
