--- a/dbt-bigquery-core/profiles.yml
+++ b/dbt-bigquery-core/profiles.yml
@@ -1,15 +1,7 @@
 dbt-bigquery-core-profile:
-  target: prod  # Default to prod for BigQuery
+  target: dev  # Default to dev for BigQuery
   outputs:
     dev:
-      extensions:
-        - httpfs
-        - parquet
-      path: /tmp/dbt.duckdb
-      schema: dev
-      threads: 1
-      type: duckdb
-    prod:
       type: bigquery
       method: service-account
       project: dbt-bigquery-core
@@ -18,5 +10,5 @@ dbt-bigquery-core-profile:
       threads: 1
       job_execution_timeout_seconds: 300
       job_retries: 1
-      keyfile: "{{ env_var('GOOGLE_APPLICATION_CREDENTIALS') }}"
+      keyfile: "{{ env_var('GOOGLE_SERVICE_ACCOUNT_KEY_PATH') }}"
       priority: interactive
