--- a/dbt-bigquery-core/models/mart/newsapi/mart_newsapi__daily_articles.yml
+++ b/dbt-bigquery-core/models/mart/newsapi/mart_newsapi__daily_articles.yml
@@ -5,9 +5,9 @@ models:
     config:
       materialized: table
       contract:
-        enforced: true
+        enforced: false
     columns:
-      - name: article_date
+      - name: article_datew
         type: date
         tests:
           - not_null
