--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,24 +6,31 @@ authors = ["Eugen Koepplin <ekoepplin@gmx.net>"]
 readme = "README.md"
 package-mode = false
 
+[[tool.poetry.source]]
+name = "soda"
+url = "https://pypi.cloud.soda.io"
+priority = "supplemental"
+
 [tool.poetry.dependencies]
-python = ">=3.9,<3.10"
-duckdb = "1.1.1"
+python = ">=3.10,<3.11"
+duckdb = "1.1.2"
 fire = "^0.5.0"
-google-cloud-bigquery = ">=1.25.0,<3.0.0"
+google-cloud-bigquery = ">=3.0.0,<4.0.0"
 loguru = "^0.7.2"
 google-auth = "^2.24.0"
 newsapi =  "0.1.1"
 newsapi-python = "0.2.7"
 pydantic = "^2.7.4"
 db-dtypes = "^1.1.1"
-pyarrow = "17.0.0"
+pyarrow = ">=12.0.0,<18.0.0"
 google-cloud-bigquery-storage = "2.26"
-dbt-core = ">=1.3.0,<1.4.0"
-dbt-bigquery = ">=1.3.0,<1.4.0"
+dbt-core = ">=1.8.0,<2.0.0"
+dbt-bigquery = ">=1.8.0,<2.0.0"
+dbt-duckdb = ">=1.8.0,<2.0.0"
 dlt = {extras = ["bigquery"], version = "^1.8.0"}
-soda-core-dbt = "^3.5.0"
-soda-core-bigquery = "^3.5.0"
+soda-dbt = {version = "*", source = "soda"}
+soda-duckdb = {version = "*", source = "soda"}
+soda-bigquery = {version = "*", source = "soda"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
